# slowstack

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: asynchronous.rst  common.rst  conf.py  index.rst  reference.rst  synchronous.rst  tutorial.rst
slowstack/asynchronous/: all.py  any.py  base.py  times_per.py
slowstack/asynchronous/utils/: priority_queue_container.py  safe_cancel.py
slowstack/common/: errors.py  status.py
slowstack/synchronous/: base.py  times_per.py
slowstack/synchronous/utils/: priority_queue_container.py
tests/: utils.py
tests/async/: test_all.py  test_any.py  test_integration.py  test_times_per.py
tests/sync/: test_times_per.py
