[tool.poetry]
name = "slowstack"
version = "1.0.0"
description = ""
authors = []
readme = "README.md"
packages = [
    { include = "slowstack" }
]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.1.0"
pytest-asyncio = "^0.23.5"
typing-extensions = "^4.10.0"
sphinx = "^7.2.6"
furo = "^2024.1.29"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"
